# human_detection

./: .gitignore  INSTALL  README.md  START  human_detection.launch  human_detection.sh
install/: .rosinstall  _setup_util.py  setup.sh
msg/: Person.msg
src/: CMakeLists.txt  main.cpp
src/Tracking/: Rectangle.cpp  Rectangle.hpp  RectangleTracker.cpp  RectangleTracker.hpp  TrackedRectangle.cpp  TrackedRectangle.hpp
src/human_detection/src/: CMakeLists.txt  OpenCVTracking.cpp  OpenCVTracking.hpp  main.cpp  main.h  package.xml
src/human_detection/src/Tracking/: Rectangle.cpp  Rectangle.hpp  RectangleTracker.cpp  RectangleTracker.hpp
src/human_detection/src/launch/: human_detection.launch
src/human_detection/src/msg/: Person.msg
